[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/music_conductor.gd" type="Script" id=1]

[node name="music_conductor" type="AudioStreamPlayer"]
script = ExtResource( 1 )

[node name="note_timer" type="Timer" parent="."]
wait_time = 0.001

[connection signal="ready" from="." to="." method="_on_music_conductor_ready"]
[connection signal="timeout" from="note_timer" to="." method="_on_note_timer_timeout"]
